# orderbooks

./: .gitignore  Cargo.toml  README.md  build.rs  presentation.html  presentation.md
config/: config.json5
proto/: README.md  orderbook_client.py  orderbook_pb2.py  orderbook_pb2_grpc.py  requirements.txt
src/: aggregator.rs  combined_book.rs  combined_orderbook.rs  config.rs  main.rs  orderbook_processor.rs  presentation.html  presentation.md
src/binance/: mod.rs
src/bitstamp/: mod.rs
src/exchange/: binance.rs  bitstamp.rs  mod.rs
src/grpc/: mod.rs  orderbook_service.rs
