[package]
name = "orderbooks"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
futures-util = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "full"] } 
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
