[package]
name = "orderbooks"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
futures-util = "0.3.31"
json5 = "0.4.1"
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "full"] } 
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.12.3"
